--- a/style.css
+++ b/style.css
@@ -6,7 +6,12 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 .submit{margin-left: 30px;}
-
+#f{
+  align-items: center;justify-content: center;padding: 30px;  text-shadow:1px 1px 2px white;box-shadow:1px 1px 1.5px white; margin-top: 50px; background-color: rgba(12, 55, 65, 0.6); padding-top: 20px; padding-bottom: 20px;  border-radius: 20px;
+}
+#s{
+  margin-left: 270px;align-items: center;justify-content: center; padding: 30px; text-shadow:1px 1px 2px white;box-shadow:1px 1px 1.5px white; margin-top: 50px; background-color: rgba(12, 55, 65, 0.6); padding-top: 20px; padding-bottom: 20px;  border-radius: 20px;
+}
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 20px;
@@ -56,6 +61,20 @@ button {
     box-shadow: 0 0.6em 1.2em rgba(28, 0, 80, 0.06);
     margin: 2em 0;
     padding: 1.2em;
+    width:90%;
+    align-items: center;
+    justify-content: center;
+ 
+  }
+  #income{
+    border-radius: 5px; padding-left: 5px; 
+  }
+  h1{margin-left: -20px;text-shadow:1px 1px 5px rgba(82, 220, 255, 0.6);color: rgb(23, 75, 88); text-align: center; margin-top: 40px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;}
+  .row{
+    display: flex;
+  }
+  .col-5{
+    width: 35%;
   }
   .output-container p {
     font-weight: 500;
@@ -66,5 +85,36 @@ button {
     text-align: center;
     font-weight: 400;
     color: #111010;
+  }
+  #b1{
+    margin-left: 130px;
+  }
+  .last{
+    align-items: center;margin-left: 34%;padding-left: 35px;
+    justify-content: center;width:30%;box-shadow:1px 1px 8px rgb(52, 88, 141);text-shadow:1px 1px 8px rgb(26, 68, 132);text-align: center; margin-top: 20px;
+  }
+  @media screen and (max-width:400px){
+  *{height: auto;
+  }
+  .col-5{width: 260px;display: flex;flex-direction: column;}
+ #f{
+  margin-left: -10%;
+ } 
+ #income
+{
+align-items: center;
+justify-content: center;
+}
+ #s{left: -49%;z-index: 2;position:absolute ;margin-top: 320px;}
+  #b1{
+    margin-left: 0px;
+  } 
+.last{margin-top: 280px;
+width: 70%;margin-left: 10%;}
+#s .submit{
+  margin-left: -3px;
+}
+h1{color: #121f23;margin-left: 13px;margin-top: 100px;font-weight: 900px;font-size: 50px;width: 340px;}
+
   }
  
